tests/regression/error/lch_reduced_reduced5_reduced.smt2
(declare-const x Bool)
(declare-sort F 0)
(declare-fun u (F) F)
(declare-sort P 0)
(declare-sort v 0)
(declare-sort li 0)
(declare-fun s (li) Bool)
(declare-fun b (li) v)
(declare-fun P (v) P)
(declare-fun % (P) li)
(declare-fun v (P P) P)
(declare-fun ib (P P) Bool)
(declare-fun l (P) Bool)
(declare-fun i (P F) Bool)
(declare-fun li (P) v)
(declare-fun b! (P P F) Int)
(declare-const p P)
(assert (forall ((a P) (b P)) (! (= (ib p p) (not (= p b))) :pattern ((ib a b)))))
(assert (forall ((r P)) (! (= (l r) (forall ((j v)) (! (ib (v r r) (v r r)) :pattern ((v r r))))) :pattern ((l r)))))
(assert (forall ((e P) (ue F)) (! (= (i p (u ue)) (l (P (b (% e))))) :pattern ())))
(declare-const f F)
(assert (or x (and (= (P (li p)) p) (forall ((i P)) (! (ib p (P (li i))) :pattern ((li i)))))))
(assert (= (b! p p (u f)) (ite (ib (v p p) (P (ite (s (% p)) (b (% p)) (b (% p))))) 0 (b! p p f))))
(assert (= (b! p p (u f)) (ite (ib p (v p p)) 0 (b! p p f))))
